Move prometheus-adapter to kube-system

--- a/templates/addons/prometheus-adapter.yaml.j2
+++ b/templates/addons/prometheus-adapter.yaml.j2
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: prometheus-adapter
-  namespace: nais
+  namespace: kube-system
   labels:
     app: prometheus-adapter
 type: kubernetes.io/tls
@@ -15,7 +15,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-adapter
-  namespace: nais
+  namespace: kube-system
   labels:
     app: prometheus-adapter
 data:
@@ -55,7 +55,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus-adapter
-  namespace: nais
+  namespace: kube-system
   labels:
     app: prometheus-adapter
 ---
@@ -120,7 +120,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-adapter
-  namespace: "nais"
+  namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -135,7 +135,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-adapter
-  namespace: "nais"
+  namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -150,7 +150,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-adapter
-  namespace: "nais"
+  namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -165,13 +165,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-adapter
-  namespace: "nais"
+  namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: prometheus-adapter-auth-reader
-  namespace: nais
+  namespace: kube-system
   labels:
     app: prometheus-adapter
 roleRef:
@@ -181,13 +181,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: prometheus-adapter
-  namespace: "nais"
+  namespace: kube-system
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: prometheus-adapter
-  namespace: nais
+  namespace: kube-system
   labels:
     app: prometheus-adapter
 spec:
@@ -204,7 +204,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus-adapter
-  namespace: nais
+  namespace: kube-system
   labels:
     app: prometheus-adapter
 spec:
@@ -232,7 +232,7 @@ spec:
         - --tls-cert-file=/var/run/serving-cert/tls.crt
         - --tls-private-key-file=/var/run/serving-cert/tls.key
         - --logtostderr=true
-        - --prometheus-url=http://nais-prometheus-prometheus-server:80
+        - --prometheus-url=http://nais-prometheus-prometheus-server.nais:80
         - --metrics-relist-interval=1m
         - --v=4
         - --config=/etc/adapter/config.yaml
@@ -286,7 +286,7 @@ metadata:
 spec:
   service:
     name: prometheus-adapter
-    namespace: "nais"
+    namespace: kube-system
   caBundle: {{ lookup('file', 'target/pki/front-proxy-ca.pem') | b64encode }}
   group: metrics.k8s.io
   version: v1beta1
