Støtte for TTLAfterFinished for jobs Denne gjør det mulig å ha automatisk opprydding på Jobs som er ferdig. Foreløpig kun i alpha, og må da skrues på via feature-gates

--- a/templates/manifests/kube-controller-manager.yaml.j2
+++ b/templates/manifests/kube-controller-manager.yaml.j2
@@ -22,6 +22,7 @@ spec:
     - --controllers=*,bootstrapsigner,tokencleaner
     - --cluster-signing-key-file=/etc/kubernetes/pki/ca-key.pem
     - --leader-elect=true
+    - --feature-gates="TTLAfterFinished=true"
     - --use-service-account-credentials=true
     - --v={{log_level | default(0) }}
 {% if vsphere is defined %}
