--- a/templates/manifests/kube-scheduler.yaml.j2
+++ b/templates/manifests/kube-scheduler.yaml.j2
@@ -16,6 +16,7 @@ spec:
     - kube-scheduler
     - --address=127.0.0.1
     - --leader-elect=true
+    - --feature-gates="TTLAfterFinished=true"    
     - --kubeconfig=/etc/kubernetes/kubeconfigs/kube-scheduler.conf
     - --v={{log_level | default(0) }}
     image: gcr.io/google_containers/kube-scheduler-amd64:v{{ k8s_version }}
