Use node_labels on kubelet if specified

--- a/templates/worker-kubelet.service.j2
+++ b/templates/worker-kubelet.service.j2
@@ -8,7 +8,7 @@ Environment="HOME=/root"
 ExecStart={{ install_dir }}/bin/kubelet \
   --config=/etc/kubernetes/kubeconfigs/kubelet-config.yaml \
   --hostname-override {{ inventory_hostname }} \
-  --node-labels=nais.io/type=worker \
+  --node-labels={{ node_labels|default(["nais.io/type=worker"])|join(',') }} \
   --image-pull-progress-deadline=10m \
   --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf \
   --v={{ log_level|default(0) }} \
