storage_nodes -> ceph_nodes

--- a/templates/bigip_aggregate_members.yaml.j2
+++ b/templates/bigip_aggregate_members.yaml.j2
@@ -1,4 +1,4 @@
-{% for item in query('inventory_hostnames', 'workers:!storage_nodes:!ceph_nodes') %}
+{% for item in query('inventory_hostnames', 'workers:!ceph_nodes') %}
 - host: "{{ lookup('dig', item) }}"
   port: {{ bigip_port | default(443) }}
   partition: "{{ bigip_partition }}"
