Revert "Lagt til k8s role label"
Virker som at dev-sbs gikk ned pga. labels

This reverts commit dc1eacf36b36f67b4f696a591a2eb1008ef9c6c8.

--- a/templates/master-kubelet.service.j2
+++ b/templates/master-kubelet.service.j2
@@ -8,7 +8,7 @@ Environment="HOME=/root"
 ExecStart={{ install_dir }}/bin/kubelet \
   --config=/etc/kubernetes/kubeconfigs/kubelet-config.yaml \
   --hostname-override {{ inventory_hostname }} \
-  --node-labels=nais.io/type=master,kubernetes.io/role=master \
+  --node-labels=nais.io/type=master \
   --image-pull-progress-deadline=10m \
   --v={{ log_level|default(2) }} \
   --register-with-taints=node.alpha.kubernetes.io/ismaster=:NoSchedule \
