--- a/templates/worker-kubelet.service.j2
+++ b/templates/worker-kubelet.service.j2
@@ -8,7 +8,7 @@ Environment="HOME=/root"
 ExecStart={{ install_dir }}/bin/kubelet \
   --config=/etc/kubernetes/kubeconfigs/kubelet-config.yaml \
   --hostname-override {{ inventory_hostname }} \
-  --node-labels={{ node_labels|default(["nais.io/type=worker","kubernetes.io/role=worker"])|join(',') }} \
+  --node-labels={{ node_labels|default(["nais.io/type=worker"])|join(',') }} \
   --image-pull-progress-deadline=10m \
   --kubeconfig=/etc/kubernetes/kubeconfigs/kubelet.conf \
   --register-with-taints={{ node_taints|default([""])|join(',') }} \
