--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -42,9 +42,9 @@ spec:
     - --client-ca-file=/etc/kubernetes/pki/ca.pem
     - --insecure-port=8080
     - --insecure-bind-address=127.0.0.1
-    - --enable-admission-plugins=PodSecurityPolicy
+    - --enable-admission-plugins=PodSecurityPolicy,PodPreset
     - --authorization-mode=Node,RBAC
-    - --runtime-config=extensions/v1beta1/daemonsets=true
+    - --runtime-config=extensions/v1beta1/daemonsets=true,settings.k8s.io/v1alpha1=true
 {% if oidc_issuer_url is defined %}
     - --oidc-issuer-url={{ oidc_issuer_url }}
     - --oidc-client-id={{ oidc_client_id }}
