--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -51,7 +51,8 @@ data:
         log . {
             class error
         }
-        health
+        health :8080
+        ready :8081
         kubernetes {{ cluster_domain }} {{ service_cidr }} {
             fallthrough in-addr.arpa ip6.arpa
             pods verified
@@ -122,6 +123,11 @@ spec:
           timeoutSeconds: 5
           successThreshold: 1
           failureThreshold: 5
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8081
+            scheme: HTTP
       dnsPolicy: Default
       volumes:
         - name: config-volume
