--- a/templates/manifests/kube-controller-manager.yaml.j2
+++ b/templates/manifests/kube-controller-manager.yaml.j2
@@ -25,7 +25,7 @@ spec:
     - --feature-gates=TTLAfterFinished=true
     - --use-service-account-credentials=true
     - --v={{log_level | default(0) }}
-    image: gcr.io/google_containers/kube-controller-manager-amd64:v{{ k8s_version }}
+    image: k8s.gcr.io/kube-controller-manager-amd64:v{{ k8s_version }}
     livenessProbe:
       failureThreshold: 8
       httpGet:
