--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -2,14 +2,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: coredns
-  namespace: kube-system
+  namespace: nais
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-  name: system:coredns
+  name: nais:coredns
 rules:
 - apiGroups:
   - ""
@@ -25,25 +23,21 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  annotations:
-    rbac.authorization.kubernetes.io/autoupdate: "true"
-  labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-  name: system:coredns
+  name: nais:coredns
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:coredns
+  name: nais:coredns
 subjects:
 - kind: ServiceAccount
   name: coredns
-  namespace: kube-system
+  namespace: nais
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: coredns
-  namespace: kube-system
+  namespace: nais
 data:
   Corefile: |
     .:53 {
@@ -69,11 +63,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: coredns
-  namespace: kube-system
+  namespace: nais
   labels:
     k8s-app: coredns
-    kubernetes.io/cluster-service: "true"
-    kubernetes.io/name: "CoreDNS"
 spec:
   replicas: 2
   selector:
@@ -143,16 +135,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-dns
-  namespace: kube-system
+  name: coredns
+  namespace: nais
   labels:
     k8s-app: coredns
-    kubernetes.io/cluster-service: "true"
-    kubernetes.io/name: "CoreDNS"
 spec:
   selector:
     k8s-app: coredns
-  clusterIP: {{ cluster_dns_ip }}
+  clusterIP: 10.254.0.54
   ports:
   - name: dns
     port: 53
