allow old kube-system sa to work while transitioning

--- a/templates/addons/traefik.yaml.j2
+++ b/templates/addons/traefik.yaml.j2
@@ -40,6 +40,9 @@ subjects:
 - kind: ServiceAccount
   name: traefik-ingress-controller
   namespace: nais
+- kind: ServiceAccount
+  name: traefik-ingress-controller
+  namespace: kube-system
 ---
 apiVersion: v1
 kind: ServiceAccount
