run 2x coredns deployments

--- a/templates/addons/core-dns.yaml.j2
+++ b/templates/addons/core-dns.yaml.j2
@@ -58,14 +58,16 @@ data:
         prometheus 0.0.0.0:9153
         loop
     }
+{% for deployment in ["coredns1", "coredns2"] %}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: coredns
+  name: {{ deployment }}
   namespace: nais
   labels:
     k8s-app: coredns
+    dns-instance: {{ deployment }}
 spec:
   replicas: 2
   selector:
@@ -75,6 +77,7 @@ spec:
     metadata:
       labels:
         k8s-app: coredns
+        dns-instance: {{ deployment }}
       annotations:
         scheduler.alpha.kubernetes.io/critical-pod: ''
         scheduler.alpha.kubernetes.io/tolerations: '[{"key":"CriticalAddonsOnly", "operator":"Exists"}]'
@@ -135,14 +138,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: coredns
+  name: {{ deployment }}
   namespace: nais
   labels:
     k8s-app: coredns
 spec:
   selector:
     k8s-app: coredns
-  clusterIP: {{ cluster_dns_ip }}
+    dns-instance: {{ deployment }}
+{% if deployment == "coredns1" %}
+  clusterIP: {{ cluster_dns1_ip }}
+{% else %}
+  clusterIP: {{ cluster_dns2_ip }}
+{% endif %}
   ports:
   - name: dns
     port: 53
@@ -153,4 +161,4 @@ spec:
   - name: metrics
     port: 9153
     protocol: TCP
----
+{% endfor %}
