Fix: Adding GODEBUG to ignore certificate missing SAN
Co-authored-by: Thomas Krampl <thomas.siegfried.krampl@nav.no>
Co-authored-by: Roger Bjørnstad <roger.bjornstad@nav.no>

--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -88,6 +88,8 @@ spec:
     - mountPath: /etc/pki
       name: pki
     env:
+    - name: GODEBUG
+      value: x509ignoreCN=0
     - name: https_proxy
       value: {{ proxy_env.https_proxy }}
     - name: http_proxy
