Set apiserver rate-limits
Co-authored-by: Terje Sannum <Terje.Sannum@nav.no>
Co-authored-by: Youssef Bel Mekki <Youssef.Bel.Mekki@nav.no>
Co-authored-by: Roger Bjørnstad <Roger.Bjornstad@nav.no>

--- a/templates/manifests/kube-apiserver.yaml.j2
+++ b/templates/manifests/kube-apiserver.yaml.j2
@@ -60,6 +60,8 @@ spec:
     - --requestheader-extra-headers-prefix=X-Remote-Extra-
     - --requestheader-group-headers=X-Remote-Group
     - --requestheader-username-headers=X-Remote-User
+    - --max-requests-inflight=50
+    - --max-mutating-requests-inflight=20
 {% if apiserver.extra_opts|default(false) %}
 {% for opts in apiserver.extra_opts %}
     - {{ opts }}
